--- a/app/code/Magento/Backend/view/adminhtml/templates/pageactions.phtml
+++ b/app/code/Magento/Backend/view/adminhtml/templates/pageactions.phtml
@@ -74,8 +74,7 @@
     data: {form_key: window.FORM_KEY},
     context: document.body
     }).done(function(res) {
-        console.log(res);
-        $q('#'+i+'_container').html(res.res);
+        window[res.func](res.res);
         $q('#copy_messages').append("<div class='copy_success'>"+res.mes+"</div>");
     })
     });
