--- a/app/code/Gradus/Highlights/view/adminhtml/templates/product/edit/highlights.phtml
+++ b/app/code/Gradus/Highlights/view/adminhtml/templates/product/edit/highlights.phtml
@@ -2,15 +2,18 @@
     var $q = jQuery.noConflict();
 
     $q( document ).ready(function() {
+        initSortable();
+    });
+    function initSortable()
+    {
         $q('#highlight_table > tbody').sortable({
             handle: '.draggable-handle3',
             revert: 300,
             placeholder: "jqplaceholder",
             tolerance: "intersect",
         }).disableSelection();
-
-    });
-    function addHighlight()
+    }
+    function addHighlight(value)
     {
         var counts = $q('#highlight_table > tbody > tr').length;
         var clb = counts+1;
@@ -21,7 +24,7 @@
             '<div class="draggable-handle3"></div></td>'+
             '<td class="posrow">'+clb+'</td><td>'+
             '<input class="admin__control-text" style="width:100%" data-form-part="product_form" id="highlights[' + clb + ']["value"]" name="highlights[' + clb + ']["value"]"' +
-            ' style="width:100%; padding:3px;" value="" />'+
+            ' style="width:100%; padding:3px;" value="'+value+'" />'+
             '</td><td><a href"#" onclick="deleteHighlight(\'highlight_row_'+clb+'\')"><img style="width:20px;" ' +
             'src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png'); ?>"></a></td></tr>';
         $q('#highlight_table > tbody').append(q);
@@ -30,20 +33,9 @@
     function copyHighlight(vals)
     {
         $q('#highlight_table > tbody').html("");
-            $q.each(vals, function (i, v) {
-                var counts = $q('#highlight_table > tbody > tr').length;
-                var clb = counts + 1;
-                var q = '';
-                q += '<tr id="highlight_row_' + clb + '">' +
-                    '<td class="data-grid-draggable-row-cell">' +
-                    '<div class="draggable-handle3"></div></td>' +
-                    '<td class="posrow">' + clb + '</td><td>' +
-                    '<input class="admin__control-text" style="width:100%" data-form-part="product_form" id="highlights[' + clb + ']["value"]" name="highlights[' + clb + ']["value"]"' +
-                    ' style="width:100%; padding:3px;" value="' + v + '" />' +
-                    '</td><td><a href"#" onclick="deleteHighlight(\'highlight_row_' + clb + '\')"><img style="width:20px;" ' +
-                    'src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png'); ?>"></a></td></tr>';
-                $q('#highlight_table > tbody').append(q);
-            })
+        $q.each(vals, function(i, v) {
+            addHighlight(v);
+        });
     }
 
     function deleteHighlight(h)
