--- a/app/code/Magento/Backend/view/adminhtml/templates/pageactions.phtml
+++ b/app/code/Magento/Backend/view/adminhtml/templates/pageactions.phtml
@@ -80,6 +80,14 @@
     });
     }
 
+    function setFields(vals)
+    {
+        $q.each(vals, function (i, v) {
+            $q('#product_form_'+i).html(v);
+            $q('#product_form_'+i).val(v);
+        });
+    }
+
     function copyitem(id, mfr)
     {
         $q('#searchPicked').val(id);
