--- a/app/code/Gradus/Requires/view/adminhtml/layout/requires_requires_edit.xml
+++ b/app/code/Gradus/Requires/view/adminhtml/layout/requires_requires_edit.xml
@@ -2,12 +2,11 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-2columns-left" xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">
     <head>
         <link src="Gradus_Requires::js/requiredskus.js"/>
-        <link src="Gradus_Requires::css/chosen.min.css"/>
+        <link src="Gradus_Requires::css/select/select2.min.css"/>
     </head>
     <body>
         <referenceContainer name="content">
             <block class="Gradus\Requires\Block\Adminhtml\Requires\Edit" name="requires_edit"/>
-            <uiComponent name="requires_product_listing"/>
         </referenceContainer>
         <referenceContainer name="left">
             <block class="Gradus\Requires\Block\Adminhtml\Requires\Edit\Tabs" name="requires_edit_tabs">
