--- a/app/code/Gradus/Requires/view/adminhtml/layout/requires_requires_edit.xml
+++ b/app/code/Gradus/Requires/view/adminhtml/layout/requires_requires_edit.xml
@@ -3,6 +3,7 @@
     <head>
         <link src="Gradus_Requires::js/requiredskus.js"/>
         <link src="Gradus_Requires::css/select/select2.min.css"/>
+        <link src="Gradus_Catalog::css/fields.css"/>
     </head>
     <body>
         <referenceContainer name="content">
