Updates to ordering of edit tabs

--- a/app/code/Gradus/Catalog/view/adminhtml/layout/catalog_product_edit.xml
+++ b/app/code/Gradus/Catalog/view/adminhtml/layout/catalog_product_edit.xml
@@ -2,5 +2,6 @@
     <head>
         <link src="Gradus_Catalog::css/chosen.min.css"/>
         <link src="Gradus_Catalog::css/fields.css"/>
+        <link src="Gradus_Catalog::js/hide.js"/>
     </head>
     </page>
