--- a/app/code/Gradus/Highlights/view/adminhtml/layout/catalog_product_new.xml
+++ b/app/code/Gradus/Highlights/view/adminhtml/layout/catalog_product_new.xml
@@ -10,8 +10,8 @@
                     <argument name="config" xsi:type="array">
                         <item name="label" xsi:type="string" translate="true">Highlights</item>
                         <item name="collapsible" xsi:type="boolean">true</item>
-                        <item name="opened" xsi:type="boolean">true</item>
-                        <item name="sortOrder" xsi:type="string">1</item>
+                        <item name="opened" xsi:type="boolean">false</item>
+                        <item name="sortOrder" xsi:type="string">4</item>
                         <item name="canShow" xsi:type="boolean">true</item>
                         <item name="componentType" xsi:type="string">fieldset</item>
                     </argument>
