--- a/app/code/Gradus/Catalog/view/adminhtml/layout/catalog_product_edit.xml
+++ b/app/code/Gradus/Catalog/view/adminhtml/layout/catalog_product_edit.xml
@@ -3,5 +3,6 @@
         <link src="Gradus_Catalog::css/chosen.min.css"/>
         <link src="Gradus_Catalog::css/fields.css"/>
         <link src="Gradus_Catalog::js/hide.js"/>
+        <link src="Gradus_Catalog::js/copy.js"/>
     </head>
     </page>
